--- a/css/main.css
+++ b/css/main.css
@@ -5,16 +5,34 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Nanum Pen Script', cursive;
+    background-image: url('https://i.imgur.com/6CaswQS.jpg');
+    background-attachment: fixed;
   }
   
 #board {
     display: grid;
-    grid-template-columns: repeat(3, 10vmin);
-    grid-template-rows: repeat(3, 10vmin);
+    grid-template-columns: repeat(3, 25vmin);
+    grid-template-rows: repeat(3, 25vmin);
     gap: 0vmin;
-  }
+    background-color: rgba(240, 238, 238, 0.1);
+    color: white;
+}
 
 #board div {
-    border: 1px solid grey;
-  }
+    border: thin double #fefefe;  
+    text-align: center;
+    font-size: 25vh;
+}
+
+#title {
+    color: #fefefe;
+    font-size: 20vh;
+    margin-bottom: 0px;
+}
+
+#btn {
+    margin-top: 3vh;
+    margin-bottom: 5vh;
+    padding-bottom: 4vh;
+}
